--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,20 @@ Makefile.in
 /install-sh
 /missing
 /stamp-h1
+
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+node_modules
+
+# testing
+coverage
+
+# production
+build
+
+# misc
+.DS_Store
+.env
+npm-debug.log
+
